# dotzsh

./: .gitignore  .gitmodules  README.md  backlink.py  source-highlight.style  src-hilite-lesspipe.sh  unfocused-reporter.sh  zshrc  zshrc.sh
superhist/: .gitignore  Cargo.toml  Makefile  build.sh  test.sh
superhist/src/: main.rs
zsh-titles/: titles.plugin.zsh
