[package]
description = "Crate for life-long shell history archival and retrival"
name = "superhist"
version = "0.1.0"
authors = ["Dan Aloni <alonid@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
thiserror = "1"
globset = "0.4"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
serde_json = "1"
file-lock = "1"
chrono = "0.4"
xz2 = "0.1"
hostname = "0.3"
termion = "1.5"
