[package]
description = "Crate for life-long shell history archival and retrival"
name = "superhist"
version = "0.1.0"
authors = ["Dan Aloni <alonid@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1.6.0"
thiserror = "1.0.35"
globset = "0.4.9"
lazy_static = "1.4.0"
serde = { version = "1.0.144", features = ["derive"] }
structopt = "0.3.26"
serde_json = "1.0.85"
serde_yaml = "0.9.13"
file-lock = "2.1.6"
chrono = "0.4.22"
xz2 = "0.1.7"
hostname = "0.3.1"
termion = "1.5.6"
filetime = "0.2.17"
libc = "0.2.133"

crossterm = { version = "*", features = ["event-stream"], git = "https://github.com/da-x/crossterm", branch = "arrow-keys-on-O" }
futures = "0.3.24"
tokio = { version = "1.21.1", features = ["rt", "process", "io-util"] }
unicode-width = "0.1.10"
